--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "chatly",
-  "version": "1.0.0",
-  "description": "\"# chatly\"",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Mazen2378/chatly.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Mazen2378/chatly/issues"
-  },
-  "homepage": "https://github.com/Mazen2378/chatly#readme",
-  "dependencies": {
-    "apollo-server": "^3.5.0",
-    "graphql": "^16.0.1"
-  }
+	"name": "chatly",
+	"version": "1.0.0",
+	"description": "\"# chatly\"",
+	"main": "server.js",
+	"scripts": {
+		"dev": "nodemon server.js",
+		"start": "node server.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Mazen2378/chatly.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/Mazen2378/chatly/issues"
+	},
+	"homepage": "https://github.com/Mazen2378/chatly#readme",
+	"dependencies": {
+		"apollo-server": "^3.5.0",
+		"graphql": "^16.0.1",
+		"mysql2": "^2.3.3",
+		"sequelize": "^6.12.0-alpha.1"
+	}
 }
