--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"apollo-server": "^3.5.0",
 		"bcryptjs": "^2.4.3",
 		"graphql": "^16.0.1",
+		"jsonwebtoken": "^8.5.1",
 		"md5": "^2.3.0",
 		"mysql2": "^2.3.3",
 		"sequelize": "^6.12.0-alpha.1"
